# QtCreatorTerminalPlugin

./: .clang-format  .gitignore  CMakeLists.txt  Character.h  ColorScheme.cpp  ColorScheme.h  ColorSchemeLoader.cpp  ColorSchemeLoader.h  ColorSchemeManager.cpp  ColorSchemeManager.h  ColorTables.h  ExtendedCharTable.cpp  ExtendedCharTable.h  Filter.cpp  History.cpp  History.h  HistorySearch.h  KLocalizedString.h  KeyboardTranslator.cpp  KeyboardTranslatorManager.cpp  KeyboardTranslatorManager.h  KonsoleSettings.cpp  KonsoleSettings.h  LineBlockCharacters.cpp  LineBlockCharacters.h  LinkParser.cpp  ProcessInfo.cpp  ProcessInfo.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  ProfileReader.cpp  ProfileReader.h  ProfileWriter.cpp  ProfileWriter.h  Pty.cpp  Pty.h  PtyConfig.h  QContainerAdapters.h  (+33 more)
config/: GenericPathProvider.cpp  PathProvider.cpp  PathProvider.h  bufferfragment_p.h  kauthorized.cpp  kauthorized.h  kconfig.cpp  kconfig.h  kconfig_p.cpp  kconfig_p.h  kconfigbackend_p.h  kconfigbase.h  kconfigdata.cpp  kconfigdata.h  kconfiggroup.cpp  kconfigini.cpp  kconfigini_p.h  kconfigwatcher.h  kcoreconfigskeleton.cpp  kcoreconfigskeleton.h  ksharedconfig.cpp  ksharedconfig.h
data/: Default.profile
docker/: Dockerfile  build.sh
ki18n/: common_helpers.cpp  config.h  kcatalog.cpp  kcatalog_p.h  ki18n_export.h  ki18n_logging.cpp  ki18n_logging.h  ki18n_logging_kuit.h  klocalizedcontext.cpp  klocalizedcontext.h  klocalizedstring.cpp  klocalizedstring.h  ktranscript.cpp  ktranscript_p.h  kuitmarkup.cpp  kuitmarkup_p.h
kui/: KPluralHandlingSpinBox  fonthelpers.cpp  kcolorbutton.cpp  kcolorbutton.h  kconfigdialogmanager.cpp  kconfigdialogmanager.h  kconfiggroupgui.cpp  kconfiggui.h  kconfigloader.cpp  kconfigloader.h  kconfigloaderhandler_p.h  kconfigskeleton.cpp  kconfigwidgets_debug.cpp  kfontaction.cpp  kfontchooser.cpp  kfontchooser.h  kfontrequester.h  kfontsizeaction.cpp  kfontsizeaction.h  kguiitem.cpp  kguiitem.h  kmessagebox.cpp  kmessagebox.h  kmessagebox_p.cpp  kpagedialog.h  kpagewidgetmodel.h  kpluralhandlingspinbox.cpp  kselectaction.cpp  kselectaction.h  kselectaction_p.h  ksqueezedtextlabel.cpp  ksqueezedtextlabel.h  kstandardguiitem.h  ktitlewidget.cpp  ktitlewidget.h
profile/: ColorSchemeEditor.cpp  EditProfileDialog.cpp  EditProfileDialog.h  EditProfileGeneralPage.ui  EditProfileScrollingPage.ui  FontDialog.cpp
scripts/: build-using-docker.sh  build.sh
settings/: HistorySizeWidget.cpp
src/: CMakeLists.txt  CharacterColor.h  CharacterWidth.cpp  ColorScheme.cpp  ColorScheme.h  ColorSchemeManager.cpp  ColorSchemeManager.h  Emulation.cpp  Emulation.h  Enumeration.h  Filter.cpp  Filter.h  IncrementalSearchBar.cpp  IncrementalSearchBar.h  KeyboardTranslator.cpp  KeyboardTranslator.h  KeyboardTranslatorManager.cpp  KonsoleSettings.h  LineBlockCharacters.cpp  LinkManager.cpp  LinkManager.h  LinkParser.h  ProcessInfo.cpp  ProcessInfo.h  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  ProfileWriter.cpp  Pty.cpp  Pty.h  PtyConfig.h  Screen.h  ScreenWindow.cpp  ScreenWindow.h  Session.cpp  Session.h  SessionManager.h  ShellCommand.cpp  ShellCommand.h  (+18 more)
src/config/: GenericPathProvider.h  StandardPathProvider.cpp  StandardPathProvider.h  config-kconfig.h  kauthorized.h  kconfig.cpp  kconfig.h  kconfig_core_log_settings.cpp  kconfig_core_log_settings.h  kconfig_p.h  kconfigbase.h  kconfigdata.cpp  kconfigdata.h  kconfiggroup.cpp  kconfiggroup.h  kconfiggroup_p.h  kconfigini.cpp  kconfigwatcher.cpp  kcoreconfigskeleton.h  ksharedconfig.h
src/ki18n/: Messages.sh  gettext.h  kcatalog.cpp  ki18n_logging_kuit.cpp  klocalizedstring.cpp  klocalizedstring.h  klocalizedtranslator.cpp  klocalizedtranslator.h  ktranscript_export.h  kuitmarkup.cpp  kuitmarkup.h  main.cpp
src/kui/: fonthelpers.cpp  kcollapsiblegroupbox.h  kconfigdialog.cpp  kconfigdialog.h  kconfiggroupgui.cpp  kconfiggui.cpp  kconfigloader.cpp  kconfigloader.h  kconfigskeleton.h  kconfigwidgets_debug.h  kfontaction.h  kfontchooser.cpp  kfontchooser.h  kmessagebox.cpp  kmessagewidget.h  kpagemodel.h  kpageview.h  kpagewidget.h  kpagewidgetmodel.cpp  kpluralhandlingspinbox.h  kselectaction.cpp  kselectaction_p.h  ksqueezedtextlabel.cpp  ktitlewidget.cpp  ktitlewidget.h  loggingcategory.cpp  loggingcategory.h
src/profile/: ColorSchemeEditor.cpp  ColorSchemeEditor.h  ColorSchemeEditor.ui  EditProfileAdvancedPage.ui  EditProfileAppearancePage.ui  EditProfileDialog.cpp  EditProfileDialog.h  FontDialog.h  KeyBindingEditor.cpp  KeyBindingEditor.h
src/settings/: HistorySizeWidget.h
