cmake_minimum_required(VERSION 3.10)

# Remove when sharing with others.
list(APPEND CMAKE_PREFIX_PATH "/apps/qtcreator-8.0.0/bin")

project(TerminalPlugin)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_CXX_STANDARD 17)

find_package(QtCreator REQUIRED COMPONENTS Core TextEditor ProjectExplorer)
find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets Gui Xml Network Qml)
set(QtX Qt${QT_VERSION_MAJOR})

add_qtc_plugin(TerminalPlugin
    PLUGIN_DEPENDS
        QtCreator::Core
        QtCreator::TextEditor
        QtCreator::ProjectExplorer
    DEPENDS
        ${QtX}::Core
        ${QtX}::Gui
        ${QtX}::Network
        ${QtX}::Widgets
        ${QtX}::Qml
        QtCreator::ExtensionSystem
        QtCreator::Utils
    SOURCES
        src/CharacterWidth.h
        src/ColorSchemeManager.h
        src/Enumeration.h
        src/ExtendedCharTable.h
        src/kptyprocess.h
        src/KeyboardTranslatorManager.h
        src/LineBlockCharacters.h
        src/ProcessInfo.h
        src/Profile.h
        src/ProfileManager.h
        src/ProfileReader.h
        src/ProfileWriter.h
        src/PtyConfig.h
        src/QContainerAdapters.h
        src/ScrollState.h
        src/TerminalConfig.h
        src/TerminalDisplayAccessible.h
        src/SessionManager.h
        src/TerminalDebug.h
        src/TerminalOutputPane.h
        src/TerminalPlugin.h
        src/TerminalWindow.h
        src/config/GenericPathProvider.h
        src/config/PathProvider.h
        src/config/StandardPathProvider.h
        src/config/bufferfragment_p.h
        src/config/config-kconfig.h
        src/config/conversioncheck.h
        src/config/kauthorized.h
        src/config/kconfig.h
        src/config/kconfig_core_log_settings.h
        src/config/kconfig_p.h
        src/config/kconfig_version.h
        src/config/kconfigbackend_p.h
        src/config/kconfigbase.h
        src/config/kconfigbase_p.h
        src/config/kconfigdata.h
        src/config/kconfiggroup.h
        src/config/kconfiggroup_p.h
        src/config/kconfigini_p.h
        src/config/kconfigwatcher.h
        src/config/kcoreconfigskeleton.h
        src/config/kcoreconfigskeleton_p.h
        src/config/ksharedconfig.h
        src/KonsoleSettings.h
        src/hsluv.h
        src/ki18n/KLocalizedContext
        src/ki18n/KLocalizedString
        src/ki18n/KLocalizedTranslator
        src/ki18n/KuitMarkup
        src/ki18n/KuitSetup
        src/ki18n/common_helpers_p.h
        src/ki18n/config.h
        src/ki18n/gettext.h
        src/ki18n/kcatalog_p.h
        src/ki18n/ki18n_export.h
        src/ki18n/ki18n_logging.h
        src/ki18n/ki18n_logging_kuit.h
        src/ki18n/ki18n_version.h
        src/ki18n/klocalizedcontext.h
        src/ki18n/klocalizedstring.h
        src/ki18n/klocalizedtranslator.h
        src/ki18n/ktranscript_export.h
        src/ki18n/ktranscript_p.h
        src/ki18n/kuitmarkup.h
        src/ki18n/kuitmarkup_p.h
        src/ki18n/kuitsetup.h
        src/kui/KCollapsibleGroupBox
        src/kui/KConfigGui
        src/kui/KConfigLoader
        src/kui/KConfigSkeleton
        src/kui/KGuiItem
        src/kui/KMessageBox
        src/kui/KMessageBoxDontAskAgainInterface
        src/kui/KMessageBoxNotifyInterface
        src/kui/KMessageWidget
        src/kui/KPluralHandlingSpinBox
        src/kui/KSqueezedTextLabel
        src/kui/KStandardGuiItem
        src/kui/fonthelpers_p.h
        src/kui/kcollapsiblegroupbox.h
        src/kui/kcolorbutton.h
        src/kui/kconfigdialog.h
        src/kui/kconfigdialogmanager.h
        src/kui/kconfiggui.h
        src/kui/kconfigloader.h
        src/kui/kconfigloader_p.h
        src/kui/kconfigloaderhandler_p.h
        src/kui/kconfigskeleton.h
        src/kui/kconfigwidgets_debug.h
        src/kui/kfontaction.h
        src/kui/kfontchooser.h
        src/kui/kfontrequester.h
        src/kui/kfontsizeaction.h
        src/kui/kguiitem.h
        src/kui/kmessagebox.h
        src/kui/kmessagebox_p.h
        src/kui/kmessageboxdontaskagaininterface.h
        src/kui/kmessageboxnotifyinterface.h
        src/kui/kmessagewidget.h
        src/kui/kpagedialog.h
        src/kui/kpagedialog_p.h
        src/kui/kpagemodel.h
        src/kui/kpagemodel_p.h
        src/kui/kpageview.h
        src/kui/kpageview_p.h
        src/kui/kpagewidget.h
        src/kui/kpagewidget_p.h
        src/kui/kpagewidgetmodel.h
        src/kui/kpagewidgetmodel_p.h
        src/kui/kpluralhandlingspinbox.h
        src/kui/kselectaction.h
        src/kui/kselectaction_p.h
        src/kui/ksqueezedtextlabel.h
        src/kui/kstandardguiitem.h
        src/kui/ktitlewidget.h
        src/kui/loggingcategory.h
        src/Character.h
        src/CharacterColor.h
        src/ColorScheme.h
        src/ColorTables.h
        src/Emulation.h
        src/Filter.h
        src/History.h
        src/KeyboardTranslator.h
        src/LineFont.h
        src/Pty.h
        src/Screen.h
        src/ScreenWindow.h
        src/Session.h
        src/ShellCommand.h
        src/TerminalCharacterDecoder.h
        src/TerminalDisplay.h
        src/Vt102Emulation.h
        src/kprocess.h
        src/kpty.h
        src/kpty_p.h
        src/kptydevice.h
        src/profile/ColorSchemeEditor.h
        src/profile/EditProfileDialog.h
        src/profile/FontDialog.h
        src/profile/KeyBindingEditor.h
        src/settings/HistorySizeWidget.h
        src/KonsoleSettings.cpp
        src/CharacterWidth.cpp
        src/ColorSchemeManager.cpp
        src/ExtendedCharTable.cpp
        src/KeyboardTranslatorManager.cpp
        src/LineBlockCharacters.cpp
        src/ProcessInfo.cpp
        src/Profile.cpp
        src/ProfileManager.cpp
        src/ProfileReader.cpp
        src/ProfileWriter.cpp
        src/ScrollState.cpp
        src/TerminalDisplayAccessible.cpp
        src/SessionManager.cpp
        src/TerminalDebug.cpp
        src/TerminalOutputPane.cpp
        src/TerminalPlugin.cpp
        src/TerminalWindow.cpp
        src/config/GenericPathProvider.cpp
        src/config/PathProvider.cpp
        src/config/StandardPathProvider.cpp
        src/config/kauthorized.cpp
        src/config/kconfig.cpp
        src/config/kconfig_core_log_settings.cpp
        src/config/kconfigbackend.cpp
        src/config/kconfigbase.cpp
        src/config/kconfigdata.cpp
        src/config/kconfiggroup.cpp
        src/config/kconfigini.cpp
        src/config/kconfigwatcher.cpp
        src/config/kcoreconfigskeleton.cpp
        src/config/ksharedconfig.cpp
        src/hsluv.c
        src/ki18n/common_helpers.cpp
        src/ki18n/kcatalog.cpp
        src/ki18n/ki18n_logging.cpp
        src/ki18n/ki18n_logging_kuit.cpp
        src/ki18n/klocalizedcontext.cpp
        src/ki18n/klocalizedstring.cpp
        src/ki18n/klocalizedtranslator.cpp
        src/ki18n/ktranscript.cpp
        src/ki18n/kuitmarkup.cpp
        src/ki18n/main.cpp
        src/kui/fonthelpers.cpp
        src/kui/kcollapsiblegroupbox.cpp
        src/kui/kcolorbutton.cpp
        src/kui/kconfigdialog.cpp
        src/kui/kconfigdialogmanager.cpp
        src/kui/kconfiggroupgui.cpp
        src/kui/kconfiggui.cpp
        src/kui/kconfigloader.cpp
        src/kui/kconfigskeleton.cpp
        src/kui/kconfigwidgets_debug.cpp
        src/kui/kfontaction.cpp
        src/kui/kfontchooser.cpp
        src/kui/kfontrequester.cpp
        src/kui/kfontsizeaction.cpp
        src/kui/kguiitem.cpp
        src/kui/kmessagebox.cpp
        src/kui/kmessagebox_p.cpp
        src/kui/kmessagewidget.cpp
        src/kui/kpagedialog.cpp
        src/kui/kpagemodel.cpp
        src/kui/kpageview.cpp
        src/kui/kpageview_p.cpp
        src/kui/kpagewidget.cpp
        src/kui/kpagewidgetmodel.cpp
        src/kui/kpluralhandlingspinbox.cpp
        src/kui/kselectaction.cpp
        src/kui/ksqueezedtextlabel.cpp
        src/kui/kstandardguiitem.cpp
        src/kui/ktitlewidget.cpp
        src/kui/loggingcategory.cpp
        src/ColorScheme.cpp
        src/Emulation.cpp
        src/Filter.cpp
        src/History.cpp
        src/KeyboardTranslator.cpp
        src/Pty.cpp
        src/Screen.cpp
        src/ScreenWindow.cpp
        src/Session.cpp
        src/ShellCommand.cpp
        src/TerminalCharacterDecoder.cpp
        src/TerminalDisplay.cpp
        src/Vt102Emulation.cpp
        src/kprocess.cpp
        src/kpty.cpp
        src/kptydevice.cpp
        src/kptyprocess.cpp
        src/profile/ColorSchemeEditor.cpp
        src/profile/ColorSchemeEditor.ui
        src/profile/EditProfileDialog.cpp
        src/profile/FontDialog.cpp
        src/profile/KeyBindingEditor.cpp
        src/settings/HistorySizeWidget.cpp
)

add_compile_definitions(
    TERMINALPLUGIN_LIBRARY
    qtermwidget5_EXPORT
    qtermwidget5_EXPORTS
    HAVE_POSIX_OPENPT
    HAVE_SYS_TIME_H
    HAVE_UPDWTMPX
    COLORSCHEMES_DIR="/usr/local/share/qtermwidget5/color-schemes"
    KB_LAYOUT_DIR="/usr/local/share/qtermwidget5/kb-layouts"
    TRANSLATIONS_DIR="/usr/local/share/qtermwidget5/translations"
)

target_include_directories(TerminalPlugin PRIVATE
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_SOURCE_DIR}/src/kui
    ${CMAKE_SOURCE_DIR}/src/settings
    ${CMAKE_SOURCE_DIR}/src/ki18n
)

if(APPLE)
    # brew install gettext
    find_package(Intl REQUIRED)
    # Copy the header because brew puts Qt headers that collide
    configure_file("${Intl_INCLUDE_DIRS}/libintl.h" "include/libintl.h" COPYONLY)
    target_include_directories(TerminalPlugin PRIVATE
        ${CMAKE_CURRENT_BINARY_DIR}/include
    )
    target_link_libraries(TerminalPlugin PRIVATE ${Intl_LIBRARIES})
else()
    target_link_libraries(TerminalPlugin PUBLIC
        util
    )
endif()
